--- a/resources/views/tracking/showStep.edge
+++ b/resources/views/tracking/showStep.edge
@@ -14,7 +14,7 @@ Show Step
           <th class="px-4 py-2 text-left">Activities</th>
           <th class="px-4 py-2 text-left">Time</th>
           <th class="px-4 py-2 text-left">Duration</th>
-          <th class="px-4 py-2 text-left">Calories Burn</th>
+          <th class="px-4 py-2 text-left">Step</th>
           <th class="px-4 py-2 text-left">Action</th>
         </tr>
       </thead>
