--- a/resources/views/tracking/show.edge
+++ b/resources/views/tracking/show.edge
@@ -13,12 +13,26 @@ Tracking Dashboard
 <div class="w-1/2 mx-auto rounded-xl" style="background: linear-gradient(to right, #0B257E, #000000);">
   <div class="mt-5 p-4">
     <h1 class="text-3xl font-bold leading-tight">
-      Kondisi kamu saat ini : Sehat
+      Kondisi kamu saat ini : {{ goals.status }}
     </h1>
+    @if (goals.status == 'Overweight')
     <p class="w-1/2 mt-5">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod Lorem ipsum dolor sit amet, consectetur
-      adipisicing elit, sed do eiusmod
+      Kamu harus memperhatikan pola makan dan olahraga kamu agar bisa menurunkan berat badan
     </p>
+    @elseif (goals.status == 'Normal')
+    <p class="w-1/2 mt-5">
+      Kamu harus memperhatikan pola makan dan olahraga kamu agar bisa menjaga berat badan
+    </p>
+    @elseif (goals.status == 'Underweight')
+    <p class="w-1/2 mt-5">
+      Kamu harus memperhatikan pola makan dan olahraga kamu agar bisa menaikkan berat badan
+    </p>
+    @else
+    <p class="w-1/2 mt-5">
+      Kamu harus memperhatikan pola makan dan olahraga kamu agar bisa menjaga berat badan
+    </p>
+    @endif
+    
   </div>
 </div>
 
@@ -26,12 +40,13 @@ Tracking Dashboard
   <div class="card" id="trackingChart"></div>
   <div class="tooltip"></div>
   <div class="card ml-32 bg-black rounded-xl shadow-blue p-6 relative hover:bg-gray-800">
-    <div class="card-content text-center mt-5">
-      <h2 class="card-title text-white text-2xl font-bold">Progress </h2>
-      <p class="card-description text-white mt-5 px-36"></p>
+    <div class="card-content text-center w-96 mt-5">
+      <h2 class="card-title text-white text-3xl font-bold mb-10">You Need : </h2>
+      <h2 class="card-title mt-5 text-white text-xl font-bold">{{ goals.calories - tracking.calories }} kcal</h2>
+      <h2 class="card-title mt-5 text-white text-xl font-bold">{{ goals.workout - tracking.workout }} hours workout</h2>
+      <h2 class="card-title mt-5 text-white text-xl font-bold">{{ goals.steps - tracking.steps }} Step</h2>
     </div>
   </div>
-
 </div>
 
 
@@ -145,7 +160,7 @@ Tracking Dashboard
               .style('opacity', 0);
           });
       });
-
+      
       svg.append('g')
         .attr('class', 'x axis')
         .attr('transform', `translate(0,${height})`)
