--- a/resources/views/components/layouts/main.edge
+++ b/resources/views/components/layouts/main.edge
@@ -23,7 +23,7 @@
     <!-- End Content Body -->
   </div>
 
-  <div class="w-full py-4 bg-opacity-75 backdrop-blur-md bottom-0">
+  <div>
     @layouts.footer()
     @end
   </div>
